fix weird content cutoff issue

--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,5 +1,7 @@
 footer {
   color: white;
+  width: 100%;
+  position: fixed;
 }
 
 footer p {
